2003-11-08  Thorsten Jordan <thorsten_jordan@gmx.de>
	* everywhere, beginning at game.cpp
	  - removed compile dependencies
	* user_interface.cpp
	  - first bits of terrain simulation
	    map position is intentionally wrong for testing.

2003-11-08  Thorsten Jordan <thorsten_jordan@gmx.de>
	* image.h image.cpp texture.h texture.cpp font.cpp global_data.cpp
	  - removed silly "morealpha" option.
	    made texture attributes more flexible (direct passing of OpenGL
	    codes is posssible).

2003-11-08  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface.cpp user_interface.h
	  - again i implemented a new water code.
	    this is much like the original code:
	    A large quad of waves is drawn around the view position.
	    The new water is independent from view direction, and much
	    faster than the old water implementations because it uses
	    display lists.
	    The code can be adapted to PC's performance.
	    Wave height and normals are computed and used for ship's
	    rotation giving a realistic behaviour.

2003-10-30  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface.cpp
	  - updated and corrected simulation as far as possible.
	    sun and moon seem to be too small, but numerical results seem
	    correct?!
	    simulation is roughly accurate by rise/set times and degrees for
	    both.

2003-10-27  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface.cpp global_data.h global_data.cpp
	  - added simulation and display of sun and moon.
	    (currently works only in freeview mode)

2003-10-22  Thorsten Jordan <thorsten_jordan@gmx.de>
	* model.cpp model.h viewmodel.cpp
	  - introduced display lists to speed up drawing.
	  - fixed NAN vertex normal drawing bug
	* user_interface.cpp
	  - removed "hack" comments, made water "hack" to current code.

2003-10-21  Thorsten Jordan <thorsten_jordan@gmx.de>
	* model.h model.cpp
	  - changed model format from mdl to 3ds
	    now you can load 3ds models directly, with more than one